@@ -10,8 +10,6 @@ matrix:
     env: TOXENV=py26
   - python: "2.7"
     env: TOXENV=py27
-  - python: "3.2"
-    env: TOXENV=py32
   - python: "3.3"
     env: TOXENV=py33
   - python: "3.4"
@@ -24,8 +22,6 @@ matrix:
     env: TOXENV=py26-cryptographyMaster
   - python: "2.7"
     env: TOXENV=py27-cryptographyMaster
-  - python: "3.2"
-    env: TOXENV=py32-cryptographyMaster
   - python: "3.3"
     env: TOXENV=py33-cryptographyMaster
   - python: "3.4"
@@ -62,7 +58,6 @@ matrix:
     env: TOXENV=py27
   - env: TOXENV=py26-cryptographyMaster
   - env: TOXENV=py27-cryptographyMaster
-  - env: TOXENV=py32-cryptographyMaster
   - env: TOXENV=py33-cryptographyMaster
   - env: TOXENV=py34-cryptographyMaster
   - env: TOXENV=pypy-cryptographyMaster
