@@ -1,5 +1,5 @@
 [tox]
-envlist = {pypy,py26,py27,py32,py33,py34}{,-cryptographyMaster},pypi-readme,check-manifest
+envlist = {pypy,py26,py27,py33,py34}{,-cryptographyMaster},pypi-readme,check-manifest
 
 [testenv]
 deps =
